--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,6 +1,10 @@
 version: '3'
 services:
   learning_docker:
+    build:
+      context: .
+      args:
+        NODE_ENV: production
     environment:
       - NODE_ENV=production
     command: npm run prod
